// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate function tests > should parse a nango.yaml file that is version 1 as expected 1`] = `
[
  {
    "actions": [
      {
        "attributes": {},
        "auto_start": true,
        "description": "",
        "endpoints": [],
        "models": [
          {
            "fields": null,
            "name": "boolean",
          },
        ],
        "name": "github-write-action",
        "nango_yaml_version": "v1",
        "returns": "boolean",
        "runs": "",
        "scopes": [],
        "track_deletes": false,
        "type": "action",
      },
    ],
    "providerConfigKey": "demo-github-integration",
    "syncs": [
      {
        "attributes": {},
        "auto_start": true,
        "description": "",
        "endpoints": [],
        "models": [
          {
            "fields": [
              {
                "name": "id",
                "type": "integer",
              },
              {
                "name": "owner",
                "type": "string",
              },
              {
                "name": "repo",
                "type": "string",
              },
              {
                "name": "issue_number",
                "type": "number",
              },
              {
                "name": "title",
                "type": "string",
              },
              {
                "name": "author",
                "type": "string",
              },
              {
                "name": "author_id",
                "type": "string",
              },
              {
                "name": "state",
                "type": "string",
              },
              {
                "name": "date_created",
                "type": "date",
              },
              {
                "name": "date_last_modified",
                "type": "date",
              },
              {
                "name": "body",
                "type": "string",
              },
            ],
            "name": "GithubIssue",
          },
        ],
        "name": "github-issue-example",
        "nango_yaml_version": "v1",
        "returns": [
          "GithubIssue",
        ],
        "runs": "every half hour",
        "scopes": [],
        "track_deletes": false,
        "type": "sync",
      },
    ],
  },
]
`;

exports[`generate function tests > should parse a nango.yaml file that is version 2 as expected 1`] = `
[
  {
    "actions": [
      {
        "attributes": {},
        "description": "Get a GitHub issue.",
        "endpoints": [
          {
            "GET": "/ticketing/tickets/{GithubCreateIssueInput:id}",
          },
        ],
        "input": {
          "fields": [
            {
              "name": "id",
              "type": "integer",
            },
          ],
          "name": "GithubCreateIssueInput:id",
        },
        "is_public": false,
        "last_deployed": null,
        "models": [
          {
            "fields": [
              {
                "name": "id",
                "type": "integer",
              },
              {
                "name": "owner",
                "type": "string",
              },
              {
                "name": "repo",
                "type": "string",
              },
              {
                "name": "issue_number",
                "type": "number",
              },
              {
                "name": "title",
                "type": "string",
              },
              {
                "name": "author",
                "type": "string",
              },
              {
                "name": "author_id",
                "type": "string",
              },
              {
                "name": "state",
                "type": "string",
              },
              {
                "name": "date_created",
                "type": "date",
              },
              {
                "name": "date_last_modified",
                "type": "date",
              },
              {
                "name": "body",
                "type": "string",
              },
            ],
            "name": "GithubIssueAction",
          },
        ],
        "name": "github-get-issue",
        "nango_yaml_version": "v2",
        "pre_built": false,
        "returns": "GithubIssueAction",
        "runs": "",
        "scopes": [
          "repo:read",
        ],
        "type": "action",
        "version": null,
      },
      {
        "attributes": {},
        "description": "Creates a GitHub issue.",
        "endpoints": [
          {
            "POST": "/ticketing/tickets",
          },
        ],
        "input": {
          "fields": [
            {
              "name": "id",
              "type": "integer",
            },
            {
              "name": "owner",
              "type": "string",
            },
            {
              "name": "repo",
              "type": "string",
            },
            {
              "name": "issue_number",
              "type": "number",
            },
            {
              "name": "title",
              "type": "string",
            },
            {
              "name": "author",
              "type": "string",
            },
            {
              "name": "author_id",
              "type": "string",
            },
            {
              "name": "state",
              "type": "string",
            },
            {
              "name": "date_created",
              "type": "date",
            },
            {
              "name": "date_last_modified",
              "type": "date",
            },
            {
              "name": "body",
              "type": "string",
            },
          ],
          "name": "GithubCreateIssueInput",
        },
        "is_public": false,
        "last_deployed": null,
        "models": [
          {
            "fields": [
              {
                "name": "result",
                "type": "GithubIssue",
              },
            ],
            "name": "GithubCreateOutput",
          },
        ],
        "name": "github-create-issue",
        "nango_yaml_version": "v2",
        "pre_built": false,
        "returns": "GithubCreateOutput",
        "runs": "",
        "scopes": [
          "repo:write",
        ],
        "type": "action",
        "version": null,
      },
      {
        "attributes": {},
        "description": "Deletes a GitHub issue.",
        "endpoints": [
          {
            "DELETE": "/ticketing/tickets/{GithubIssue:id}",
          },
        ],
        "input": {
          "fields": [
            {
              "name": "id",
              "type": "integer",
            },
          ],
          "name": "GithubIssue:id",
        },
        "is_public": false,
        "last_deployed": null,
        "models": [
          {
            "fields": null,
            "name": "boolean",
          },
        ],
        "name": "github-delete-issue",
        "nango_yaml_version": "v2",
        "pre_built": false,
        "returns": "boolean",
        "runs": "",
        "scopes": [
          "repo:write",
        ],
        "type": "action",
        "version": null,
      },
    ],
    "postConnectionScripts": [],
    "providerConfigKey": "demo-github-integration",
    "syncs": [
      {
        "attributes": {},
        "auto_start": true,
        "description": "Sync github issues continuously from public repos
",
        "endpoints": [
          {
            "GET": "/ticketing/tickets",
          },
        ],
        "input": {},
        "is_public": false,
        "last_deployed": null,
        "models": [
          {
            "fields": [
              {
                "name": "id",
                "type": "integer",
              },
              {
                "name": "owner",
                "type": "string",
              },
              {
                "name": "repo",
                "type": "string",
              },
              {
                "name": "issue_number",
                "type": "number",
              },
              {
                "name": "title",
                "type": "string",
              },
              {
                "name": "author",
                "type": "string",
              },
              {
                "name": "author_id",
                "type": "string",
              },
              {
                "name": "state",
                "type": "string",
              },
              {
                "name": "date_created",
                "type": "date",
              },
              {
                "name": "date_last_modified",
                "type": "date",
              },
              {
                "name": "body",
                "type": "string",
              },
            ],
            "name": "GithubIssue",
          },
        ],
        "name": "github-issue-example",
        "nango_yaml_version": "v2",
        "pre_built": false,
        "returns": [
          "GithubIssue",
        ],
        "runs": "every half hour",
        "scopes": [
          "public_repo",
        ],
        "sync_type": "INCREMENTAL",
        "track_deletes": false,
        "type": "sync",
        "version": null,
        "webhookSubscriptions": [
          "issue.creation",
        ],
      },
      {
        "attributes": {},
        "auto_start": true,
        "description": "Sync github issues continuously from public repos example two
",
        "endpoints": [
          {
            "GET": "/ticketing/tickets-two",
          },
        ],
        "input": {},
        "is_public": false,
        "last_deployed": null,
        "models": [
          {
            "fields": [
              {
                "name": "id",
                "type": "integer",
              },
              {
                "name": "owner",
                "type": "string",
              },
              {
                "name": "repo",
                "type": "string",
              },
              {
                "name": "issue_number",
                "type": "number",
              },
              {
                "name": "title",
                "type": "string",
              },
              {
                "name": "author",
                "type": "string",
              },
              {
                "name": "author_id",
                "type": "string",
              },
              {
                "name": "state",
                "type": "string",
              },
              {
                "name": "date_created",
                "type": "date",
              },
              {
                "name": "date_last_modified",
                "type": "date",
              },
              {
                "name": "body",
                "type": "string",
              },
            ],
            "name": "GithubIssue2",
          },
        ],
        "name": "github-issue-example-two",
        "nango_yaml_version": "v2",
        "pre_built": false,
        "returns": [
          "GithubIssue2",
        ],
        "runs": "every hour",
        "scopes": [
          "public_repo",
        ],
        "sync_type": "INCREMENTAL",
        "track_deletes": false,
        "type": "sync",
        "version": null,
        "webhookSubscriptions": [],
      },
      {
        "attributes": {},
        "auto_start": true,
        "description": "Sync github issues to multiple models",
        "endpoints": [
          {
            "GET": "/ticketing/ticket",
          },
          {
            "GET": "/ticketing/pr",
          },
        ],
        "input": {},
        "is_public": false,
        "last_deployed": null,
        "models": [
          {
            "fields": [
              {
                "name": "id",
                "type": "integer",
              },
              {
                "name": "owner",
                "type": "string",
              },
              {
                "name": "repo",
                "type": "string",
              },
              {
                "name": "issue_number",
                "type": "number",
              },
              {
                "name": "title",
                "type": "string",
              },
              {
                "name": "author",
                "type": "string",
              },
              {
                "name": "author_id",
                "type": "string",
              },
              {
                "name": "state",
                "type": "string",
              },
              {
                "name": "date_created",
                "type": "date",
              },
              {
                "name": "date_last_modified",
                "type": "date",
              },
              {
                "name": "body",
                "type": "string",
              },
            ],
            "name": "GithubIssue3",
          },
          {
            "fields": [
              {
                "name": "id",
                "type": "integer",
              },
              {
                "name": "owner",
                "type": "string",
              },
              {
                "name": "repo",
                "type": "string",
              },
              {
                "name": "issue_number",
                "type": "number",
              },
              {
                "name": "title",
                "type": "string",
              },
              {
                "name": "author",
                "type": "string",
              },
              {
                "name": "author_id",
                "type": "string",
              },
              {
                "name": "state",
                "type": "string",
              },
              {
                "name": "date_created",
                "type": "date",
              },
              {
                "name": "date_last_modified",
                "type": "date",
              },
              {
                "name": "body",
                "type": "string",
              },
            ],
            "name": "GithubPR",
          },
        ],
        "name": "github-multiple-models",
        "nango_yaml_version": "v2",
        "pre_built": false,
        "returns": [
          "GithubIssue3",
          "GithubPR",
        ],
        "runs": "every 5 minutes",
        "scopes": [],
        "sync_type": "FULL",
        "track_deletes": false,
        "type": "sync",
        "version": null,
        "webhookSubscriptions": [],
      },
    ],
  },
]
`;
